--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "moment": "^2.24.0",
     "react": "^16.13.0",
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-dates": "^21.8.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-redux": "^5.1.2",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "3.4.0",
+    "redux": "^3.7.2",
+    "uuid": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
