--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "firebase": "^7.12.0",
     "moment": "^2.24.0",
     "react": "^16.13.0",
     "react-addons-shallow-compare": "^15.6.2",
