--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.4.0",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.3.0",
     "uuid": "^3.1.0"
   },
   "scripts": {
