--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.12.0",
+    "history": "^4.10.1",
     "moment": "^2.24.0",
     "react": "^16.13.0",
     "react-addons-shallow-compare": "^15.6.2",
