--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.4.1",
     "firebase": "^7.12.0",
     "history": "^4.10.1",
     "moment": "^2.24.0",
+    "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-addons-shallow-compare": "^15.6.2",
+    "react-bootstrap": "^1.0.0",
     "react-dates": "^21.8.0",
     "react-dom": "^16.13.0",
     "react-redux": "^5.1.2",
