--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "apexcharts": "^3.18.1",
     "bootstrap": "^4.4.1",
     "firebase": "^7.12.0",
     "history": "^4.10.1",
